--- a/FRDM-TFC/FLASH/makefile.local
+++ b/FRDM-TFC/FLASH/makefile.local
@@ -5,6 +5,6 @@
 ################################################################################
 
 export GNU_Make_Install_DirEnv=$(CWInstallLocationEnv)/gnu/bin
-export ProjDirPath=C:/Documents and Settings/aluno/workspace/FRDM-TFC_R1.0/FRDM-TFC
+export ProjDirPath=C:/Documents and Settings/aluno/git/arm-kl25z/FRDM-TFC
 export CWInstallLocationEnv=C:/Freescale/CW MCU v10.6
 export ARMSourceryDirEnv=$(CWInstallLocationEnv)/Cross_Tools/arm-none-eabi-gcc-4_7_3/bin
